The alignment of the button is disturbed( fixed it but not proper yet)

--- a/plugins/woocommerce/assets/css/woocommerce.css
+++ b/plugins/woocommerce/assets/css/woocommerce.css
@@ -663,7 +663,6 @@ p.demo_store a {
 
 .woocommerce ul.products li.product .button {
     margin-top: 1em;
-    width: 200px;
 }
 
 .woocommerce ul.products li.product .price {
@@ -755,10 +754,10 @@ p.demo_store a {
 .woocommerce button.button,
 .woocommerce input.button {
     font-size: 100%;
-    margin: 0;
+    margin: 0 auto;
     line-height: 1;
     cursor: pointer;
-    position: relative;
+    width: 200px;
     text-decoration: none;
     overflow: visible;
     padding: .618em 1em;
